--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,11 @@
     <string name="username_hint">Nome de Utilizador</string>
     <string name="password_hint">Senha</string>
     <string name="login_button_text">Entrar</string>
-    <string name="register_button_text">Não tem conta? Registe-se.</string>
+    <string name="create_account_button_text">Não tem conta? Registe-se.</string>
+    <string name="Username_text_box">Nome do Utilizador.</string>
+    <string name="Email_text_box">Email.</string>
+    <string name="Register_check_button">Registar</string>
+    <string name="Cancel_button">Cancelar</string>
 
     <string name="privacy_policy">Ao utilizar esta aplicação, o utilizador autoriza o armazenamento e processamento dos seus dados para efeitos de gestão da conta e apresentação pública das informações que decidir disponibilizar. Estes dados serão utilizados exclusivamente para garantir o correto funcionamento da aplicação e a experiência pretendida pelo utilizador.
 
@@ -20,4 +24,9 @@ Recomenda-se que o utilizador consulte regularmente esta política para se mante
     <string name="accept_privacy_policy_button_text">Aceitar e continuar</string>
 
     <string name="sair_button_text">Sair</string>
+    <string name="Delete_account_button_text">Eliminar Conta</string>
+    <string name="Page_title">Título da página</string>
+    <string name="Page_author">Autor</string>
+    <string name="Page_author_ID">ID</string>
+    <string name="Page_author_text">Texto da página</string>
 </resources>
